--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>jayasree - form test</title>
+		<title>Weblokicks</title>
 		<link href="css/bootstrap.min.css?v=0.0.0" rel="stylesheet">
 		</head>
 		<style>	
