--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 										</a>
 									</div>
 									<div class="col-4 mt-3 pl-3">
-										<img src="img/hours1.png" width="320" height="200">
+										<img src="img/hours1.PNG" width="320" height="200">
 										</div>
 									</div>
 								
